// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TextField Defaults play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r5:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r5:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r4:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rt:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rt:"
           class="TextField_textbox__qbZlk"
           aria-describedby="testID"
           value
    >
    <div id="textFieldErrorId-:rs:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAs play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r7:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <textarea id="textFieldTextboxId-:r7:"
              class="TextField_textbox__qbZlk  TextField_textbox_multiline__dzg2r"
    >
    </textarea>
    <div id="textFieldErrorId-:r6:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname"
       lang="nb"
  >
    <label for="htmlid"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="htmlid"
           class="TextField_textbox__qbZlk"
           data-testid="123ID"
           value
    >
    <div id="textFieldErrorId-:r2:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAutoCompleteInputModeNameAndPlaceholder play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rf:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rf:"
           class="TextField_textbox__qbZlk"
           autocomplete="given-name"
           inputmode="text"
           name="test_name"
           placeholder="Kari Nordmann"
           value
    >
    <div id="textFieldErrorId-:re:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rd:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rd:"
           class="TextField_textbox__qbZlk"
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rc:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDescription play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r17:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
      <span class="TextField_labelDescription__WCNdq">
        En liten beskrivelse tekst
      </span>
    </label>
    <input id="textFieldTextboxId-:r17:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r16:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r9:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r9:"
           class="TextField_textbox__qbZlk"
           disabled
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:r8:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithError play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rv:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rv:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:ru:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithErrorMessageAndHasError play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r11:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r11:"
           class="TextField_textbox__qbZlk"
           aria-describedby="textFieldErrorId-:r10:"
           aria-invalid="true"
           value
    >
    <div id="textFieldErrorId-:r10:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW ">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r1f:"
           class="TextField_label__K0isy"
    >
      <span>
        TextField har blitt blurret
      </span>
    </label>
    <input id="textFieldTextboxId-:r1f:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r1e:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHasErrorAndAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r14:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r14:"
           class="TextField_textbox__qbZlk"
           aria-describedby="konsumentId textFieldErrorId-:r13:"
           aria-invalid="true"
           value
    >
    <div id="textFieldErrorId-:r13:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW ">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHideLabel play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r19:"
           class="TextField_label__K0isy TextField_srOnly__0+S1D"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r19:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r18:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithIsLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r1b:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r1b:"
           class="TextField_textbox__qbZlk TextField_textbox_large__Qmwm8"
           value
    >
    <div id="textFieldErrorId-:r1a:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithMinAndMaxLength play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rn:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rn:"
           class="TextField_textbox__qbZlk"
           maxlength="50"
           minlength="10"
           value
    >
    <div id="textFieldErrorId-:rm:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithPattern play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rp:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rp:"
           class="TextField_textbox__qbZlk"
           pattern="[a-z]"
           value
    >
    <div id="textFieldErrorId-:ro:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithReadOnly play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rh:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rh:"
           class="TextField_textbox__qbZlk"
           readonly
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rg:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRef play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r1:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r1:"
           class="TextField_textbox__qbZlk"
           value
           name="dummyNameForwardedFromRef"
    >
    <div id="textFieldErrorId-:r0:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequired play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rj:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rj:"
           class="TextField_textbox__qbZlk"
           required
           value
    >
    <div id="textFieldErrorId-:ri:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rl:"
           class="TextField_label__K0isy"
    >
      <span class="TextField_label_required__n7aHl">
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rl:"
           class="TextField_textbox__qbZlk"
           required
           value
    >
    <div id="textFieldErrorId-:rk:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRows play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rr:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <textarea id="textFieldTextboxId-:rr:"
              class="TextField_textbox__qbZlk  TextField_textbox_multiline__dzg2r"
              rows="4"
    >
    </textarea>
    <div id="textFieldErrorId-:rq:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithThousandSeparator play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:r1d:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:r1d:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r1c:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label for="textFieldTextboxId-:rb:"
           class="TextField_label__K0isy"
    >
      <span>
        Navn
      </span>
    </label>
    <input id="textFieldTextboxId-:rb:"
           class="TextField_textbox__qbZlk"
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:ra:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
